# firecracker-sdk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: firecracker-tests.yml  tests.yml
src/: lib.rs
src/api/startup/: mod.rs
src/aws_s3/: mod.rs
src/domain/: mod.rs
src/domain/config/: mod.rs
src/domain/http/: mod.rs
src/firecracker/: mod.rs
src/firecracker/firecracker_configuration/: mod.rs
src/firecracker/firecracker_socket/: mod.rs
src/firecracker/firercracker_process/: mod.rs
src/firecracker/firercracker_process/firecracker_startup/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/connection/: mod.rs
src/infrastructure/connection/socket/: mod.rs
src/infrastructure/connection/stream/: mod.rs
src/infrastructure/fs/: mod.rs
src/infrastructure/process/: mod.rs
src/infrastructure/s3/: mod.rs
src/vm/: mod.rs
src/vm/firercracker_process/: mod.rs
src/vm/firercracker_process/firecracker_startup/: mod.rs
src/vm/vm_socket/: mod.rs
tests/: firecracker_startup.rs
tests/firecracker_startup/: startup.rs  startup_w_args.rs  startup_w_downloading.rs  startup_w_start_vm.rs  startup_w_stdout.rs  startup_wo_stdout.rs
