[package]
name = "firecracker-sdk"
version = "0.0.0"
edition = "2024"
authors = [ "morphqdd <github.com/morphqdd>" ]
description = "SDK for working with Firecracker MicroVM using the Rust programming language"
repository = "https://github.com/org-0trust/firecracker-sdk"
license-file = "LICENSE"
keywords = ["sdk", "aws", "api", "firecracker", "firecracker-sdk"]
categories = ["API bindings", "Virtualization", "Configuration"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"
