[package]
name = "firecracker-sdk"
version = "0.0.1"
edition = "2024"
authors = [ "morphqdd <github.com/morphqdd>" ]
description = "SDK for working with Firecracker MicroVM using the Rust programming language"
repository = "https://github.com/org-0trust/firecracker-sdk"
documentaion = "https://docs.rs/firecracker-sdk"
homepage = "https://firecracker-microvm.github.io/"
license = "MIT"
keywords = ["sdk", "aws", "api", "firecracker", "firecracker-sdk"]
categories = ["api-bindings", "virtualization", "config"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.23.0"
