[package]
name = "firecracker-sdk"
version = "0.0.3"
edition = "2024"
authors = [ "morphqdd <github.com/morphqdd>" ]
description = "SDK for working with Firecracker MicroVM using the Rust programming language"
repository = "https://github.com/org-0trust/firecracker-sdk"
documentation = "https://docs.rs/firecracker-sdk"
homepage = "https://firecracker-microvm.github.io/"
license = "MIT"
keywords = ["sdk", "aws", "api", "firecracker", "firecracker-sdk"]
categories = ["api-bindings", "virtualization", "config"]

[dependencies]
anyhow = "1.0.100"
http = "1.3.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["native-tls-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tempfile = "3.23.0"
tun = { version = "0.8.4", features = ["tokio"] }
tun-rs = { version = "2.7.4", features = ["async_tokio"] }

[[test]]
name = "startup"
path = "tests/firecracker_startup/startup.rs"

[[test]]
name = "startup_w_args"
path = "tests/firecracker_startup/startup_w_args.rs"

[[test]]
name = "startup_w_downloading"
path = "tests/firecracker_startup/startup_w_downloading.rs"

[[test]]
name = "startup_wo_stdout"
path = "tests/firecracker_startup/startup_wo_stdout.rs"

[[test]]
name = "startup_w_stdout"
path = "tests/firecracker_startup/startup_w_stdout.rs"

[[test]]
name = "startup_w_start_vm"
path = "tests/firecracker_startup/startup_w_start_vm.rs"
